--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="./falcon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&family=Poppins&family=Nunito&family=Raleway&family=Ubuntu&family=DM+Sans&family=Work+Sans&family=Source+Sans+Pro&family=Fira+Sans&family=Titillium+Web&family=Manrope&family=Cabin&family=IBM+Plex+Sans&family=Asap&family=Mulish&family=Lexend&family=Space+Grotesk&family=Plus+Jakarta+Sans&family=Sora&family=Urbanist&family=Epilogue&display=swap" rel="stylesheet">
