--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <meta name="twitter:description" content="Instantly generate AI-powered slides & presentations with FalconAI. Try now for free!">
     <meta name="twitter:image" content="https://yourwebsite.com/falconai-preview.png">
 
+<meta name="google-site-verification" content="pmgfRb7UesoR_jS8_Zb-szSLDTE0VljRyZ2xsrXxOYM" />
+
   </head>
   <body>
     <div id="root"></div>
