--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/falcon.jpg" />
+    <link rel="icon" type="image/x-icon" href="/resized_falcon_64x64.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2814008505726528"
