--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&family=Poppins&family=Nunito&family=Raleway&family=Ubuntu&family=DM+Sans&family=Work+Sans&family=Source+Sans+Pro&family=Fira+Sans&family=Titillium+Web&family=Manrope&family=Cabin&family=IBM+Plex+Sans&family=Asap&family=Mulish&family=Lexend&family=Space+Grotesk&family=Plus+Jakarta+Sans&family=Sora&family=Urbanist&family=Epilogue&display=swap" rel="stylesheet">
     <!-- ✅ Update SEO Title & Description -->
     <title>Best AI PPT Maker | FalconAI - Free AI Presentation Generator</title>
-    <meta name="description" content="Create professional AI-generated PowerPoint slides for free with FalconAI. No watermarks, fully customizable, and instant download. Try now!">
+
+  <meta name="description" content="Create professional AI-generated PowerPoint slides for free with FalconAI. Unlimited slides, less than 12 seconds AI assistant, no watermarks, fully customizable, and instant download. Try now!">
+
 
     <!-- ✅ Add Important SEO Keywords -->
     <meta name="keywords" content="AI PPT Maker, Free PowerPoint Generator, AI Slide Creator, PPT Maker Online, Presentation Generator, FalconAI, Best AI Presentation Software,GammaAI,PPT Maker,AI PPT,Falcont,AI Assistant,Chatgpt,deepseek,google gemini,Gemini  AI,Pdf converter,ppt to pdt">
