--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 
 <meta name="google-site-verification" content="pmgfRb7UesoR_jS8_Zb-szSLDTE0VljRyZ2xsrXxOYM" />
 
+<!-- ✅ Add this at the end of your <head> -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "FalconX",
+  "url": "https://falconai.space"
+}
+</script>
+
+
+
   </head>
   <body>
     <div id="root"></div>
