--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "FalconX",
+  "name": "FalconXO",
   "url": "https://falconai.space"
 }
 </script>
