--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- ✅ Add Important SEO Keywords -->
-    <meta name="keywords" content="AI PPT Maker, Free PowerPoint Generator, AI Slide Creator, PPT Maker Online, Presentation Generator, FalconAI, Best AI Presentation Software,GammaAI,PPT Maker,AI PPT,Falcont,AI Assistant,Chatgpt,deepseek,google gemini,Gemini  AI,Pdf converter,ppt to pdt">
+    <meta name="keywords" content="AI PPT Maker, Free PowerPoint Generator, AI Slide Creator, PPT Maker Online, Presentation Generator, Falcon, Best AI Presentation Software,GammaAI,PPT Maker,AI PPT,Falcon ppt,AI Assistant,Chatgpt,deepseek,google gemini,Gemini  AI,Pdf converter,ppt to pdt">
 
     <!-- ✅ Social Media & Open Graph (OG) Tags -->
     <meta property="og:title" content="FalconAI - Best AI PPT Maker & AI Assistant">
