--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&family=Poppins&family=Nunito&family=Raleway&family=Ubuntu&family=DM+Sans&family=Work+Sans&family=Source+Sans+Pro&family=Fira+Sans&family=Titillium+Web&family=Manrope&family=Cabin&family=IBM+Plex+Sans&family=Asap&family=Mulish&family=Lexend&family=Space+Grotesk&family=Plus+Jakarta+Sans&family=Sora&family=Urbanist&family=Epilogue&display=swap" rel="stylesheet">
     <!-- ✅ Update SEO Title & Description -->
-    <title>Best AI PPT Maker | FalconAI - Free AI Presentation Generator</title>
+    <title>Falcon PPT Maker - Free AI Presentation Generator | FalconAI</title>
 
-  <meta name="description" content="Create professional AI-generated PowerPoint slides for free with FalconAI. Unlimited slides, less than 12 seconds AI assistant, no watermarks, fully customizable, and instant download. Try now!">
-
+  <meta name="description" content="Falcon PPT Maker lets you create AI-generated PowerPoint slides instantly. Free, customizable, watermark-free, and fast. Try FalconAI now!">
 
     <!-- ✅ Add Important SEO Keywords -->
-    <meta name="keywords" content="AI PPT Maker, Free PowerPoint Generator, AI Slide Creator, PPT Maker Online, Presentation Generator, Falcon, Best AI Presentation Software,GammaAI,PPT Maker,AI PPT,Falcon ppt,AI Assistant,Chatgpt,deepseek,google gemini,Gemini  AI,Pdf converter,ppt to pdt">
-
+    <meta name="keywords" content="falcon ppt maker, AI PPT Maker, Free PowerPoint Generator, FalconAI, AI Slide Creator, AI Presentation Software, ChatGPT Slides, ppt to pdf converter, Unlimited slides ppt maker, No watermark ppt maker, AI PowerPoint Builder, automated presentation tool, presentation design software, free ppt generator, AI slide design, AI presentation maker, online PPT generator, create slides with AI, AI-based presentation builder, PowerPoint automation, PowerPoint designer tool, presentation creator AI">
     <!-- ✅ Social Media & Open Graph (OG) Tags -->
     <meta property="og:title" content="FalconAI - Best AI PPT Maker & AI Assistant">
     <meta property="og:description" content="Generate AI-powered presentations instantly with FalconAI. No watermarks, fully customizable, and free!">
