--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   <link rel="icon" type="image/x-icon" href="/resized_image_64x64.png?v=2" />
+   <link rel="icon" type="image/x-icon" href="/file_00000000a16061f7b8821c2367ff4369_conversation_id=67fe5f03-8e98-800f-a3c6-6c55f1a4653e&message_id=82c616d9-5db9-4a25-b1ee-9d5dcd9a0c3f.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2814008505726528"
