--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
      crossorigin="anonymous"></script>
      
 
+
+<meta name="monetag" content="b284b849477398eba40346636366a84b">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&family=Poppins&family=Nunito&family=Raleway&family=Ubuntu&family=DM+Sans&family=Work+Sans&family=Source+Sans+Pro&family=Fira+Sans&family=Titillium+Web&family=Manrope&family=Cabin&family=IBM+Plex+Sans&family=Asap&family=Mulish&family=Lexend&family=Space+Grotesk&family=Plus+Jakarta+Sans&family=Sora&family=Urbanist&family=Epilogue&display=swap" rel="stylesheet">
     <!-- ✅ Update SEO Title & Description -->
     <title>Falcon PPT Maker - Free AI Presentation Generator | FalconAI</title>
