--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 }
 </script>
 
-<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9330861,document.createElement('script'))</script>
+<script src="https://ligheechoagool.com/88/tag.min.js" data-zone="147396" async data-cfasync="false"></script>
 
 
   </head>
