--- a/index.html
+++ b/index.html
@@ -10,19 +10,7 @@
    
 
 
-<script>
-(function(tpwh){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = tpwh || {};
-s.src = "\/\/confusedassociation.com\/b-XzVMsJd.Gulm0aY\/WKcT\/he\/mt9ZuKZLUVl\/kYPFT\/YDzoNWDDk\/4kNkTBQStaNxjeMr0NO\/TBgq1ENzQL";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
-
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://al5sm.com/tag.min.js',9333977,document.body||document.documentElement)</script>
 
 
   
